--- a/.github/workflows/semgrep.yml
+++ b/.github/workflows/semgrep.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
       # 1. Checkout do repositório
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@f43a0e5ff2bd294095638e18286ca9a3d1956744
 
       # 2. Instalar Semgrep via pip
       - name: Install Semgrep
@@ -28,14 +28,14 @@ jobs:
 
       # 4. Upload do relatório
       - name: Upload scan results
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02
         with:
           name: semgrep-report
           path: report.json
         
     # 5. Upload do relatório SARIF para Security tab
       - name: Upload SARIF report
-        uses: github/codeql-action/upload-sarif@v3
+        uses: github/codeql-action/upload-sarif@528ca598d956c91826bd742262cdfc5d02b77710
         with:
             sarif_file: semgrep.sarif
             github_token: ${{ secrets.GITHUB_TOKEN }}
