--- a/.github/workflows/sca.yml
+++ b/.github/workflows/sca.yml
@@ -39,4 +39,4 @@ jobs:
         uses: github/codeql-action/upload-sarif@528ca598d956c91826bd742262cdfc5d02b77710
         with:
             sarif_file: snyk-report.sarif
-            github_token: ${{ secrets.GITHUB_TOKEN }}
+            token: ${{ secrets.GITHUB_TOKEN }}
