--- a/.github/workflows/zap-security-scan.yml
+++ b/.github/workflows/zap-security-scan.yml
@@ -14,7 +14,7 @@ jobs:
     
     steps:
     - name: Checkout code
-      uses: actions/checkout@v2
+      uses: actions/checkout@f43a0e5ff2bd294095638e18286ca9a3d1956744
 
     - name: Set up Docker for OWASP ZAP
       uses: docker/setup-buildx-action@v1
@@ -24,7 +24,7 @@ jobs:
         docker run --rm -t owasp/zap2docker-stable zap-baseline.py -t https://github.com/luigiferrarasinno/sprint-_csharp.git>
         
     - name: Upload ZAP Report as Artifact
-      uses: actions/upload-artifact@v2
+      uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02
       with:
         name: zap-report
         path: zap-report.html
