--- a/.github/workflows/zap-security-scan.yml
+++ b/.github/workflows/zap-security-scan.yml
@@ -17,7 +17,7 @@ jobs:
       uses: actions/checkout@f43a0e5ff2bd294095638e18286ca9a3d1956744
 
     - name: Set up Docker for OWASP ZAP
-      uses: docker/setup-buildx-action@v1
+      uses: docker/setup-buildx-action@1583c0f09d26c58c59d25b0eef29792b7ce99d9a
 
     - name: Run OWASP ZAP Baseline Scan
       run: |
