--- a/.github/workflows/zap-security-scan.yml
+++ b/.github/workflows/zap-security-scan.yml
@@ -3,7 +3,7 @@ name: OWASP ZAP Security Scan
 on:
   push:
     branches:
-      - main  # Ou outro branch que você preferir
+      - main  #branch
   pull_request:
     branches:
       - main
@@ -11,20 +11,25 @@ on:
 jobs:
   zap-scan:
     runs-on: ubuntu-latest
-    
+
     steps:
-    - name: Checkout code
-      uses: actions/checkout@f43a0e5ff2bd294095638e18286ca9a3d1956744
+      - name: Checkout code
+        uses: actions/checkout@f43a0e5ff2bd294095638e18286ca9a3d1956744
 
-    - name: Set up Docker for OWASP ZAP
-      uses: docker/setup-buildx-action@1583c0f09d26c58c59d25b0eef29792b7ce99d9a
+      - name: Set up Docker for OWASP ZAP
+        uses: docker/setup-buildx-action@1583c0f09d26c58c59d25b0eef29792b7ce99d9a
 
-    - name: Run OWASP ZAP Baseline Scan
-      run: |
-        docker run --rm -t owasp/zap2docker-stable zap-baseline.py -t https://github.com/luigiferrarasinno/sprint-_csharp.git
-        
-    - name: Upload ZAP Report as Artifact
-      uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02
-      with:
-        name: zap-report
-        path: zap-report.html
+      - name: Run OWASP ZAP Baseline Scan
+        run: |
+          docker run --rm \
+            -v ${{ github.workspace }}:/zap/wrk \
+            -t ghcr.io/zaproxy/zap2docker-stable \
+            zap-baseline.py \
+            -t https://sua-aplicacao-em-execucao.com \
+            -r zap-report.html
+
+      - name: Upload ZAP Report as Artifact
+        uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02
+        with:
+          name: zap-report
+          path: zap-report.html
