--- a/.github/workflows/zap-security-scan.yml
+++ b/.github/workflows/zap-security-scan.yml
@@ -2,19 +2,16 @@ name: OWASP ZAP Security Scan
 
 on:
   push:
-    branches:
-      - main
+    branches: [main]
   pull_request:
-    branches:
-      - main
+    branches: [main]
 
 jobs:
   zap-scan:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@<commit-SHA>
 
       - name: Run OWASP ZAP Baseline Scan
         run: |
@@ -26,7 +23,7 @@ jobs:
             -r zap-report.html
 
       - name: Upload ZAP Report as Artifact
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@<commit-SHA>
         with:
           name: zap-report
           path: zap-report.html
