--- a/.github/workflows/zap-security-scan.yml
+++ b/.github/workflows/zap-security-scan.yml
@@ -11,14 +11,22 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout do código
-        uses: actions/checkout@f43a0e5ff2bd294095638e18286ca9a3d1956744
+      - name: Checkout code
+        uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8
+
+      - name: Build and start application
+        run: |
+          dotnet build
+          nohup dotnet run --urls http://0.0.0.0:5090 &
+          sleep 10
 
       - name: Run OWASP ZAP Baseline Scan
         run: |
+          chmod -R 777 $GITHUB_WORKSPACE
           docker run --rm \
+            --user root \
             -v ${{ github.workspace }}:/zap/wrk \
-            -t ghcr.io/zaproxy/zaproxy \
+            ghcr.io/zaproxy/zaproxy \
             zap-baseline.py \
             -t http://localhost:5090 \
             -r zap-report.html
@@ -28,5 +36,3 @@ jobs:
         with:
           name: zap-report
           path: zap-report.html
-
-
