--- a/.github/workflows/zap-security-scan.yml
+++ b/.github/workflows/zap-security-scan.yml
@@ -21,9 +21,10 @@ jobs:
 
       - name: Build and start application
         run: |
-          dotnet build
-          nohup dotnet run --urls http://0.0.0.0:5090 &
-          sleep 60
+          dotnet build InvestmentAPI/InvestmentAPI.csproj
+          nohup dotnet run --project InvestmentAPI/InvestmentAPI.csproj --urls http://0.0.0.0:5090 &
+          sleep 30
+
 
       - name: Run OWASP ZAP Baseline Scan
         run: |
