--- a/.github/workflows/security-ci.yml
+++ b/.github/workflows/security-ci.yml
@@ -14,11 +14,9 @@ jobs:
       security-events: write
 
     steps:
-      # 1. Checkout
       - name: Checkout source
         uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8
 
-      # 2. Setup .NET 9 SDK
       - name: Setup .NET 9 SDK
         uses: actions/setup-dotnet@67a3573c9a986a3f9c594539f4ab511d57bb3ce9
         with:
@@ -30,7 +28,7 @@ jobs:
           category: '/language:csharp'
 
       - name: Run Dependency Scanning (SCA)
-        uses: aquasecurity/trivy-action@master
+        uses: aquasecurity/trivy-action@b5b790a89ccab43dc95c01a30a4db7f83f41a1b2
         with:
           scan-type: fs
           format: table
@@ -58,6 +56,7 @@ jobs:
             -t http://localhost:5090 \
             -r zap-report.html \
             --exit-code False
+
       - name: Upload ZAP report
         uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02
         with:
@@ -66,7 +65,7 @@ jobs:
 
       - name: Comment result in PR
         if: github.event_name == 'pull_request'
-        uses: actions/github-script@v7
+        uses: actions/github-script@f2ddc2cba78e287b6122bdbf08c8193df46fe1da
         with:
           script: |
             const body = "✅ SAST, SCA e DAST executados.\n\n- Veja artefatos para detalhes.";
