--- a/.github/workflows/security-ci.yml
+++ b/.github/workflows/security-ci.yml
@@ -14,19 +14,31 @@ jobs:
       security-events: write
 
     steps:
+      # 1. Checkout
       - name: Checkout source
         uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8
 
+      # 2. Setup .NET 9 SDK
       - name: Setup .NET 9 SDK
         uses: actions/setup-dotnet@67a3573c9a986a3f9c594539f4ab511d57bb3ce9
         with:
           dotnet-version: '9.0.x'
 
-      - name: Run SAST (CodeQL)
+      # ---------- SAST (CodeQL) ----------
+      - name: Initialize CodeQL
+        uses: github/codeql-action/init@0337c4c06e7e00d0d6e64396c13b9dc18dd6d8c5
+        with:
+          languages: csharp
+
+      - name: Autobuild CodeQL database
+        uses: github/codeql-action/autobuild@0337c4c06e7e00d0d6e64396c13b9dc18dd6d8c5
+
+      - name: Analyze CodeQL results
         uses: github/codeql-action/analyze@0337c4c06e7e00d0d6e64396c13b9dc18dd6d8c5
         with:
           category: '/language:csharp'
 
+      # ---------- SCA ----------
       - name: Run Dependency Scanning (SCA)
         uses: aquasecurity/trivy-action@b6643a29fecd7f34b3597bc6acb0a98b03d33ff8
         with:
@@ -38,12 +50,14 @@ jobs:
           vuln-type: library
           path: .
 
+      # ---------- Build & run API ----------
       - name: Build and run API
         run: |
           dotnet build InvestmentAPI/InvestmentAPI.csproj
           nohup dotnet run --project InvestmentAPI/InvestmentAPI.csproj --urls http://0.0.0.0:5090 &
           sleep 30
 
+      # ---------- DAST ----------
       - name: Run OWASP ZAP Baseline (DAST)
         run: |
           chmod -R 777 $GITHUB_WORKSPACE
@@ -63,6 +77,7 @@ jobs:
           name: zap-report
           path: zap-report.html
 
+      # ---------- Notificação no PR ----------
       - name: Comment result in PR
         if: github.event_name == 'pull_request'
         uses: actions/github-script@adc0eeac992408a7b276994ca87edde1c8ce4d25
