--- a/.github/workflows/zap-security-scan.yml
+++ b/.github/workflows/zap-security-scan.yml
@@ -26,7 +26,7 @@ jobs:
           sleep 30    # aguarda a API subir
 
       - name: Run OWASP ZAP Baseline Scan
-        continue-on-error: true           # ← não interrompe o job mesmo com exit code != 0
+        continue-on-error: true           
         run: |
           chmod -R 777 $GITHUB_WORKSPACE
           docker run --rm \
@@ -40,7 +40,7 @@ jobs:
             --fail-on error               # mantém a verificação de erro crítico
 
       - name: Upload ZAP Report as Artifact
-        if: always()                      # ← garante execução mesmo que etapa anterior “falhe”
+        if: always()                      
         uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02
         with:
           name: zap-report
