--- a/.github/workflows/zap-security-scan.yml
+++ b/.github/workflows/zap-security-scan.yml
@@ -12,10 +12,10 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8
+        uses: actions/checkout@v3
 
       - name: Setup .NET 9 SDK
-        uses: actions/setup-dotnet@67a3573c9a986a3f9c594539f4ab511d57bb3ce9
+        uses: actions/setup-dotnet@v3
         with:
           dotnet-version: '9.0.x'
 
@@ -35,12 +35,12 @@ jobs:
             ghcr.io/zaproxy/zaproxy \
             zap-baseline.py \
             -t http://localhost:5090 \
-            -r zap-report.html \
-            --fail-on error || true   # <-- garante exit 0 para não quebrar o job
+            -r /zap/wrk/zap-report.html \
+            --fail-on error || true
 
       - name: Upload ZAP Report as Artifact
-        if: always()                
-        uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02
+        if: always()
+        uses: actions/upload-artifact@v3
         with:
           name: zap-report
-          path: zap-report.html
+          path: ${{ github.workspace }}/zap-report.html
