--- a/.github/workflows/zap-security-scan.yml
+++ b/.github/workflows/zap-security-scan.yml
@@ -44,4 +44,4 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: zap-report
-          path: ${{ github.workspace }}/zap-
+          path: ${{ github.workspace }}/zap-report.html
