--- a/.github/workflows/zap-security-scan.yml
+++ b/.github/workflows/zap-security-scan.yml
@@ -12,10 +12,10 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8
+        uses: actions/checkout@v3
 
       - name: Setup .NET 9 SDK
-        uses: actions/setup-dotnet@67a3573c9a986a3f9c594539f4ab511d57bb3ce9
+        uses: actions/setup-dotnet@v3
         with:
           dotnet-version: '9.0.x'
 
@@ -23,10 +23,10 @@ jobs:
         run: |
           dotnet build InvestmentAPI/InvestmentAPI.csproj
           nohup dotnet run --project InvestmentAPI/InvestmentAPI.csproj --urls http://0.0.0.0:5090 &
-          sleep 30    # aguarda a API subir
+          sleep 30
 
       - name: Run OWASP ZAP Baseline Scan
-        continue-on-error: true         
+        continue-on-error: true
         run: |
           chmod -R 777 $GITHUB_WORKSPACE
           docker run --rm \
@@ -37,11 +37,10 @@ jobs:
             zap-baseline.py \
             -t http://localhost:5090 \
             -r zap-report.html || true
-            # <-- aqui ignoramos qualquer exit code do ZAP
 
       - name: Upload ZAP Report as Artifact
-        if: always()                     
-        uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02
+        if: always()
+        uses: actions/upload-artifact@v3
         with:
           name: zap-report
           path: zap-report.html
